--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="GIF Viewer - Animated GIF Player Album">
     <meta name="author" content="ImgBase">    
-    <meta name="keywords" content="">
+    <meta name="keywords" content="GIF Viewer, iOS, GIF, Album, photo, pic, picture, image, frame, animate, animation, gifs, play, book, keyboard, twitter, Facebook, view, moving">
     <meta name="copyright" content="ImgBase" >
     <meta name="application-name" content="GIF Viewer">
     
