--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
       ga('create', 'UA-51541531-14', 'auto');
       ga('send', 'pageview');
+
     </script>
 </head> 
 
@@ -137,8 +138,7 @@
                     <li><a href="https://twitter.com/gifviewer"><i class="fa fa-twitter"></i></a></li>                        
                     <li><a href="https://www.facebook.com/gifviewer"><i class="fa fa-facebook"></i></a></li>
                 </ul>
-                <small class="copyright">Copyright &copy; 2015 <a href="http://imgbase.me">ImgBase</a></small>
-                
+                <small class="copyright">Copyright &copy; 2015 <a href="http://imgbase.me">ImgBase</a> | <a href="presskit.zip">Presskit</a></small>
             </div>
         </footer>
     </div>
