설명 변경, apple-itunes-app 메타 태그 추가

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta name="twitter:description" content="GIFViewer can play the GIF that stored in the Photos app and share it with friend." />
     <meta name="twitter:image" content="assets/images/appicon_240.png" />
     <meta name="twitter:url" content="http://gifviewer.net" />
+    <meta name="apple-itunes-app" content="app-id=895830403, app-argument=landing">
     
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
@@ -96,7 +97,7 @@
                     <div class="row">                                      
                         <div class="intro-area col-md-4 col-sm-12 col-xs-12">
                             <h2 class="title"><b>GIF Viewer</b></h2>
-                            <p class="intro"><b>GIFViewer</b> can play the GIF that stored in the Photos app and share it with friend.</p>
+                            <p class="intro"><b>GIFViewer</b> can play the GIF that stored in the iOS Photos app and share it with friend.</p>
                             <img src="assets/images/appicon_240.png" style="width:120px;height:120px;" />
                         </div>
                         <div class="clearfix visible-sm-block visible-xs-block"></div>
