Naver 웹마스터 도구 신규 등록

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <meta name="twitter:image" content="assets/images/appicon_240.png" />
     <meta name="twitter:url" content="http://gifviewer.net" />
     <meta name="apple-itunes-app" content="app-id=895830403, app-argument=landing">
+    <meta name="naver-site-verification" content="23544f4cebbc12161901063963830c35faffae4c"/>
     
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
