--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>GIF Viewer - Animated GIF Player Album</title>
+    <title>GIF Viewer for iOS - Animated GIF Player Album</title>
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GIF Viewer - Animated GIF Player Album">
+    <meta name="description" content="The default iPhone app can't play the GIF. Try to use the GIF Viewer! You can quickly and easily see the gifs.">
     <meta name="author" content="ImgBase">    
     <meta name="keywords" content="GIF Viewer, iOS, GIF, Album, photo, pic, picture, image, frame, animate, animation, gifs, play, book, keyboard, twitter, Facebook, view, moving">
     <meta name="copyright" content="ImgBase" >
     <meta name="application-name" content="GIF Viewer">
     
     <meta property="og:url" content="http://gifviewer.net"/>
-    <meta property="og:title" content="GIF Viewer - Animated GIF Player Album"/>
-    <meta property="og:description" content="GIFViewer can play the GIF that stored in the Photos app and share it with friend."/>
+    <meta property="og:title" content="GIF Viewer for iOS - Animated GIF Player Album"/>
+    <meta property="og:description" content="The default iPhone app can't play the GIF. Try to use the GIF Viewer! You can quickly and easily see the gifs."/>
     <meta property="og:type" content="website"/>    
     <meta property="og:site_name" content="GIF Viewer"/>
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@gifviewer" />
-    <meta name="twitter:title" content="GIF Viewer - Animated GIF Player Album" />
-    <meta name="twitter:description" content="GIFViewer can play the GIF that stored in the Photos app and share it with friend." />
+    <meta name="twitter:title" content="GIF Viewer for iOS - Animated GIF Player Album" />
+    <meta name="twitter:description" content="The default iPhone app can't play the GIF. Try to use the GIF Viewer! You can quickly and easily see the gifs." />
     <meta name="twitter:image" content="assets/images/appicon_240.png" />
     <meta name="twitter:url" content="http://gifviewer.net" />
     <meta name="apple-itunes-app" content="app-id=895830403, app-argument=landing">
