app-ads.txt 설정 추가

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <meta name="apple-itunes-app" content="app-id=895830403, app-argument=landing">
     <meta name="naver-site-verification" content="23544f4cebbc12161901063963830c35faffae4c"/>
 
+    <meta name="appstore:developer_url" content="https://gifviewer.net" />
+    <meta name="appstore:bundle_id" content="com.ddongkang.gifviewer" />
+    <meta name="appstore:store_id" content="SKU895830403" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
