gifviewer.net 도메인 만료로 인해 정보 변경

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta property="al:ios:url" content="gifviewer://invite_from_fb?referral=GIFViewer" />
     <meta property="al:ios:app_store_id" content="895830403" />
     <meta property="al:ios:app_name" content="GIF Viewer'" />
-    <meta property="al:web:url" content="http://gifviewer.net" />
-    <meta property="og:url" content="http://gifviewer.net"/>
+    <meta property="al:web:url" content="https://gifviewer.github.io" />
+    <meta property="og:url" content="https://gifviewer.github.io"/>
     <meta property="og:title" content="GIF Viewer for iOS - Animated GIF Player Album"/>
     <meta property="og:description" content="The default iPhone app can't play the GIF. Try to use the GIF Viewer! You can quickly and easily see the gifs."/>
     <meta property="og:type" content="website"/>
@@ -28,11 +28,11 @@
     <meta name="twitter:title" content="GIF Viewer for iOS - Animated GIF Player Album" />
     <meta name="twitter:description" content="The default iPhone app can't play the GIF. Try to use the GIF Viewer! You can quickly and easily see the gifs." />
     <meta name="twitter:image" content="assets/images/appicon_240.png" />
-    <meta name="twitter:url" content="http://gifviewer.net" />
+    <meta name="twitter:url" content="https://gifviewer.github.io" />
     <meta name="apple-itunes-app" content="app-id=895830403, app-argument=landing">
     <meta name="naver-site-verification" content="23544f4cebbc12161901063963830c35faffae4c"/>
 
-    <meta name="appstore:developer_url" content="https://gifviewer.net" />
+    <meta name="appstore:developer_url" content="https://gifviewer.github.io" />
     <meta name="appstore:bundle_id" content="com.ddongkang.gifviewer" />
     <meta name="appstore:store_id" content="SKU895830403" />
 
